--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,14 @@
   <app-root></app-root>
 </body>
 
+<!-- phongnt.14  AIzaSyBXmE9tJydLr0GJki_BlxW1GHcMr0YUp0k-->
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyAvR9_B8ymX8YELstOmxx5pgP4LTY9maZw"></script>
+<!-- Phuc -->
+<!-- 5776609f81d686e896c9662b0c431db2 -->
+<!-- phong.ultra PhanPhoiLuongThuc -->
+<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjT_FU7R4MHAg30l8JRSLILgg2uqfGcdA"
+type="text/javascript"></script> -->
+<!-- khach hang AIzaSyCjT_FU7R4MHAg30l8JRSLILgg2uqfGcdA-->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script> -->
 
 </html>
