--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PhanPhoiLuongThuc</title>
+  <title>quanlybaotroxahoi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,9 +15,12 @@
 
 <!-- phongnt.14  AIzaSyBXmE9tJydLr0GJki_BlxW1GHcMr0YUp0k-->
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyAvR9_B8ymX8YELstOmxx5pgP4LTY9maZw"></script>
+
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script> 
+
 <!-- Phuc -->
 <!-- 5776609f81d686e896c9662b0c431db2 -->
-<!-- phong.ultra PhanPhoiLuongThuc -->
+<!-- phong.ultra quanlybaotroxahoi -->
 <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjT_FU7R4MHAg30l8JRSLILgg2uqfGcdA"
 type="text/javascript"></script> -->
 <!-- khach hang AIzaSyCjT_FU7R4MHAg30l8JRSLILgg2uqfGcdA-->
